# Brew

./: .gitatrributes  .gitignore  README.md  main.py  pyproject.toml
API/: auth.py  configuration.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/blog/: 2024-04-23-private-testing.md  authors.yml
website/docs/: index.md  index.mdx
website/docs/community/: community.md
website/docs/developers/: contributing.md
website/docs/legal/: privacy-policy.md  tos.md
website/src/css/: custom.css
